feat Ref: add search bar and do some quicky fix Ref: #main
